--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "les1",
   "version": "1.0.0",
   "description": "test les1",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "system.js",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "devapp.in.ua",
   "license": "ISC",
