--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0"
+  },
+  "engines": {
+    "node": "v4.5.0",
+    "npm": "3.10.7"
   }
 } 
