--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "les1",
-  "version": "1.0.0",
-  "description": "simple page html",
-  "main": "index.js",
-  "scripts": {
-    "test": "system.js",
-    "start": "node index.js"
-  },
-  "author": "devapp.in.ua",
-  "license": "ISC",
+  "name": "node-example",
+  "version": "0.0.1",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "3.1.x"
   },
   "engines": {
-    "node": "v4.5.0",
-    "npm": "3.10.7"
+    "node": "0.10.x",
+    "npm": "1.3.x"
   }
-} 
+}
