--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "node-example",
-  "version": "0.0.1",
+  "name": "les1",
+  "version": "1.0.0",
+  "description": "simple page html",
+  "main": "index.js",
+  "scripts": {
+    "test": "system.js",
+    "start": "node index.js"
+  },
+  "author": "devapp.in.ua",
+  "license": "ISC",
   "dependencies": {
-    "express": "3.1.x"
+    "express": "^4.14.0"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.3.x"
+    "node": "v4.5.0",
+    "npm": "3.10.7"
   }
 }
